# WakefieldBeamStudiesGaudiWorkspace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
config/: ddsim_steer_baseline.py  pgun_edm4hep.py
configs/: ddsim_steer_baseline.py  digiAlgList.py  digi_steer.py
configs/digi_components/: SiTracker.py  SiVertex.py  calorimetry_EM.py  calorimetry_HAD.py  calorimetry_MU.py  digi_args.py  digi_services.py  overlay_full.py
scripts/: WarpX_to_edm4hep.py  WarpX_to_slcio.py  createHist_edm4hep.py  plot_mc_particles.py
